2000-03-09  olicha	<olivier.chapuis@free.fr>

	* FvwmButtons/draw.c (RedrawButton):
	Fixed individual button Colorset for shaped swallowed apps

2000-03-08  olicha	<olivier.chapuis@free.fr>

	* FvwmButtons/draw.c (RedrawButton):
	Fixed individual button Colorset
	* FvwmScript/Scripts/TerminalSettings.fss
	Now this script works
	
2000-03-08  olicha	<olivier.chapuis@free.fr>

	* FvwmPager/x_pager.c (initialize_pager):
	Fixed hilight desk title drawing GC

2000-03-01  Hippo

	* FvwmWinList/*: better refresh strategy: doesn't flicker anymore.

2000-03-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c (recursive_change_colorset):
	fixed uninitialised colour set in swallowed applications

2000-02-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/x.c (create_manager_window):
	applied colorset fix by Mike Han

2000-02-11  olicha	<olivier.chapuis@free.fr>

	* FvwmScript/Scripts/ScriptFvwmBaseConfig
	Replaced GlobalOpts by the new corresponding styles.

2000-02-06  olicha	<olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.c (ProcessMessage):
	Removed debug code
	* FvwmScript/Instruction.c (ChangeBackColor):
	Fixed ChangeBackColor.
	* FvwmScript/Widgets/*:
	Removed unused XSetBackground.

2000-02-06  olicha	<olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.c (ProcessMessage):
	Fixed iconification of a sticky window after a desk switch
	with FvwmTaskBarDeskOnly

2000-02-01  Hippo

	* FvwmCommand/FvwmCommandS.c: Fixed communication fifo's being removed

2000-01-31  Brad Giaccio  <bgiaccio@psrw.com>

	* FvwmGtk/FvwmGtk.1:
	fixed typo again

2000-01-30  olicha	<olivier.chapuis@free.fr>

	* FvwmScript/Scripts/ScriptFvwmScreenSetup:
	A write to file fix

2000-01-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/FvwmPager.c (list_deiconify):
	fixed deiconify packet handling

	* FvwmGtk/FvwmGtk.1:
	fixed typo

2000-01-28 olicha	<olivier.chapuis@free.fr>

	* FvwmPager/FvwmPager.c (main):
	* FvwmPager/FvwmPager.1:
	FvwmParger can use aliases.
